example/lib/availability/x_Resource/Error/Notify/mock.ts
import { NotifyComponent } from "./component"

export function initMockNotifyComponent(): NotifyComponent {
    return new Component()
}

class Component implements NotifyComponent {
    send(): void {
        // mock ではなにもしない
    }
}
